# highpass

./: .gitignore  Cargo.toml  README.md  flake.nix  highpass.toml
src/: config.rs  main.rs
src/subsonic/: client.rs  mod.rs  types.rs
src/ui/: mod.rs  player.rs  tree.rs
