[package]
name = "highpass"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
libmpv = { version = "2.0", default-features = false }
log = "0.4"
env_logger = "0.11"
